Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0, 5.7.0
-
WinRT
-
-
59f20906d9d6d7bc33069fc0960c59edf0e232e1
Description
When using QML camera component, occasionally the camera finder does not open and green screen is shown to user.
In 5.7.0 this is has higher reproduce rate if position: Camera.BackFace is set, although this way an access violation is also occurring.
Attachments
For Gerrit Dashboard: QTBUG-54278 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163641,3 | winrt: Do not assert when missing region of interest | 5.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |